--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,6 @@
 *{
 	margin: 0;
 	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 header{
@@ -10,12 +8,12 @@ header{
 	width:100%;
     max-width:900px;
 	min-width:500px;
-	border: 1px solid #000
+	border: 1px solid #000;
 	padding:10px;
 }
 
 body{
-	border: 1px solid:#000;
+	border: 1px;
 	
 }
 .header  {
@@ -23,7 +21,7 @@ body{
 	width:100%;
     max-width:900px;
 	min-width:500px;
-	border: 1px solid #000
+	border: #000 solid 1px;
 	padding:10px;
 	
 }
