--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,8 @@
 *{
 	margin: 0;
 	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 header{
@@ -21,7 +23,7 @@ body{
 	width:100%;
     max-width:900px;
 	min-width:500px;
-	border: #000 solid 1px;
+	border: 1px solid #000;
 	padding:10px;
 	
 }
